# seshat-app

./: .gitignore  LICENSE  README.md  agreements.py  amendment_diff.py  cli.py  deps.py  feat-delegation-facts-and-groups-benchmarks-post.md  feat-delegation-facts-and-groups-benchmarks-pre.md  fix-receipt-chain-integrity-benchmarks-post.md  fix-receipt-chain-integrity-benchmarks-pre.md  github.py  identity-ed25519-benchmarks.md  identity-stage1-benchmarks.md  identity-stage2-benchmarks.md  identity-stage3-benchmarks.md  identity.py  invariant_check.py  local_scanner.py  mcp_server.py  organizer.py  pyproject.toml  receipt-ed25519-benchmarks.md  receipts.py  registry.py  requirements.txt  router.py  runner.py  scanner.py  seshat-demo.cast  seshat-tui-demo.cast  seshat.py  seshat_tui.py  vault.py
seshat_tui/: __init__.py  app.py  app.tcss  colors.py  data.py  graph.py  palette.py  platform_client.py  screens.py  widgets.py
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_agreement_lint.py  test_agreements.py  test_amend_agreement_flow.py  test_amendment_diff.py  test_dashboard_csrf.py  test_dashboard_endpoints.py  test_delegation_facts_and_groups.py  test_delegation_facts_and_teams.py  test_github.py  test_graph.py  test_identity.py  test_identity_cli.py  test_invariant_integration.py  test_local_scanner.py  test_mcp_enforcement_gate.py  test_organizer.py  test_platform_client.py  test_receipts.py  test_receipts_keys_register.py  test_receipts_sync_anchor.py  test_receipts_verify.py  test_revocations.py  test_router.py  test_tui_smoke.py  (+1 more)
(+18 files in other folders)
