[project]
name = "seshat"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "keyring>=24.0.0",
    "cryptography>=42.0.0",
    "mcp>=1.0.0",
    "click>=8.0.0",
    "textual>=0.50.0",
    "liminate>=0.16.0,<0.17",
    "liminate-invariant>=0.1.1,<0.2",
    "httpx>=0.27.0",
]

[project.scripts]
seshat = "cli:cli"

[tool.setuptools]
py-modules = [
    "cli", "seshat_tui", "registry", "runner",
    "vault", "scanner", "deps", "seshat", "mcp_server",
    "github", "organizer", "router", "local_scanner", "agreements",
    "receipts", "invariant_check",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
